--- a/css/style.css
+++ b/css/style.css
@@ -437,8 +437,9 @@ body{
     display: flex;
 }
 
-.contact-item{
-    margin-right: auto;
+.contact-item:not(:last-child){
+    margin-right: 40px;
+    /* margin-right: auto; */
 }
  
                      /* <=======buttons=======> */
