--- a/css/style.css
+++ b/css/style.css
@@ -221,13 +221,13 @@ body{
     color: #ffffff;
     height: 56px;
     display: block;
-
+    
     /* display: flex;
     flex-direction: row;
     align-items: flex-start;
     padding: 16px 32px;
     gap: 10px; */
-
+    border: none;
     position: absolute;
     min-width: 169px;
     min-height: 56px;
