--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,10 @@ body{
     margin-right: 24px;
 }
 
+.team-list-item{
+    calc((100% - 48px) / 3);
+}
+
 .title{
     padding-top: 32px;
     text-align: center;
