--- a/css/style.css
+++ b/css/style.css
@@ -150,17 +150,18 @@ body{
 }
 
 .hero-title{
-    /* font-weight: 700; */
-    font-size: 56px;
-    line-height: 1.05;
-    text-align: center;
-    letter-spacing: 0.02em;
+position: absolute;
+width: 496px;
+height: 120px;
+left: 472px;
+top: 260px;
 
-    position: absolute;
-    max-width: 496px
-    /* height: 120px;
-    left: 472px;
-    top: 260px; */
+font-style: normal;
+font-weight: 700;
+font-size: 56px;
+line-height: 60px;
+text-align: center;
+letter-spacing: 0.02em;
 }
 
 .promo-title{
@@ -363,7 +364,6 @@ body{
 .logo{
     /* margin-left: 156px; */
     padding-bottom: 100px;
-    
 }
 
 .hero{
