--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ body{
 
 .hero-title{
 position: absolute;
-width: 496px;
+max-width: 496px;
 height: 120px;
 left: 472px;
 top: 260px;
@@ -380,9 +380,13 @@ letter-spacing: 0.02em;
     margin-right: 24px;
 }
 
+.privelege-list{
+    width: calc((100% - 48px) / 3);
+}
+
 .promo-list{
     /* width: calc((100% - 72px) / 4); */
-    border-radius: 0px 0px 4px 4px;
+    /* border-radius: 0px 0px 4px 4px; */
 }
 
 .promo-list-item{
