--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,9 @@ letter-spacing: 0.02em;
     margin-bottom: 8px;
 }
 
-
+.job-title{
+    padding: 32px 16px 32px;
+}
 
 .promo-list-item{
     width: calc((100% - 72px) / 4);
