--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,7 @@ letter-spacing: 0.02em;
 
 .page-header{
     border-bottom: 1px solid #e7e9fc;
+    
 }
 
 .logo{
@@ -369,7 +370,6 @@ letter-spacing: 0.02em;
 .hero{
     padding-top: 188px;
     padding-bottom: 188px;
-    
 }   
 
 .list{
@@ -430,7 +430,7 @@ letter-spacing: 0.02em;
 }
 
 .team-list-item{
-    calc((100% - 48px) / 3);
+    width: calc((100% - 48px) / 3);
 }
 
 .title{
