--- a/css/style.css
+++ b/css/style.css
@@ -124,8 +124,6 @@ body{
 
 .logo,
 .top-logo{
-    margin-right: 76px;
-
     font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 800;
@@ -199,7 +197,7 @@ letter-spacing: 0.02em;
 
 .page-nav{
     display: flex;
-    align-items: center;
+    align-items: center
 
     font-weight: 500;
     font-size: 16px;
@@ -225,12 +223,8 @@ letter-spacing: 0.02em;
     display: flex;
 }
 
-/* .menu-list .nav-item + .nav-item{
+.menu-list .nav-item + .nav-item{
     margin-left: 40px;
-} */
-
-.menu-list:not(:last-child){
-    margin-right: 40px;
 }
 
 .menu-list .contact-list{
@@ -238,10 +232,6 @@ letter-spacing: 0.02em;
     padding-top: 24px;
     padding-bottom: 24px;
 }
-
-/* .contact-list:not(:last-child){
-    margin-right: 40px;
-} */
 
 .nav-item{
     margin-left: 76px;
@@ -268,10 +258,14 @@ letter-spacing: 0.02em;
 }
 
 .hero{
+    padding-top: 188px;
+    padding-bottom: 188px;
+
     background-color: #2e2f42 ;
 }
 
 .hero-title{
+    max-width: 496px;
     line-height: 1.07;
     color: #FFFFFF;
 }
@@ -287,6 +281,7 @@ letter-spacing: 0.02em;
 
     background-color: #4D5AE5;
     font-family: "Roboto", sans-serif;
+    min-width: 169px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -297,6 +292,7 @@ letter-spacing: 0.02em;
     border-radius: 4px;
     padding: 16px 32px;
     gap: 10px;
+    border: none;
 }
 
 
