--- a/css/style.css
+++ b/css/style.css
@@ -162,11 +162,6 @@ body{
 }
 
 .hero-title{
-/* position: absolute;
-max-width: 496px;
-height: 120px;
-left: 472px;
-top: 260px; */
 
 font-style: normal;
 font-weight: 700;
@@ -177,6 +172,8 @@ letter-spacing: 0.02em;
 }
 
 .promo-title{
+    margin-bottom: 72px;    
+
     /* font-weight: 700; */
     font-size: 36px;
     line-height: 1.11;  
@@ -199,7 +196,7 @@ letter-spacing: 0.02em;
 
 .page-nav{
     display: flex;
-    align-items: center
+    align-items: center;
 
     font-weight: 500;
     font-size: 16px;
@@ -220,10 +217,6 @@ letter-spacing: 0.02em;
 .page-header{
     border-bottom: 1px solid #e7e9fc
 }
-
-/* .menu-list{
-    display: flex;
-} */
 
 .menu-list .nav-item + .nav-item{
     margin-left: 40px;
@@ -309,6 +302,7 @@ letter-spacing: 0.02em;
 .team-list-item{
     background-color: #FFFFFF;
 }
+
 
 .section-team{
     background-color: #F4F4FD
