--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ letter-spacing: 0.02em;
 }
 
 .team-list-item{
-    border-radius: 0px 0px 4px 4px;
+    
     background-color: #FFFFFF;
 }
 
@@ -336,7 +336,17 @@ letter-spacing: 0.02em;
 .privelage-list{
     width: calc((100% - 72px) / 4);
 }
+  
 
+.footer{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.bottom-lgo .footer-logo{
+    display: inline-block;
+    margin-bottom: 16px;
+}
 
 /* =====================PAGE#2==================== */
 
