--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,12 @@ letter-spacing: 0.02em;
     padding-bottom: 100px;
 }
 
-.bottom-lgo .footer-logo{
+.bottom-logo{
+    display: inline-block;
+    margin-bottom: 16px;
+}
+
+.footer-logo{
     display: inline-block;
     margin-bottom: 16px;
 }
