--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,9 @@ letter-spacing: 0.02em;
 
 .list-photo{
     display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
 }
 
 .button-list{
