--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,10 @@ letter-spacing: 0.02em;
     row-gap: 48px;
 }
 
-
+.app-name{
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+}
     
     
     
