--- a/css/style.css
+++ b/css/style.css
@@ -229,11 +229,24 @@ letter-spacing: 0.02em;
 .page-header{
     border-bottom: 1px solid #e7e9fc
 }
-
-.menu-list .nav-item + .nav-item{
-    margin-left: 40px;
+/* ??????????????? */
+.logo,
+.top-logo{
+    margin-right: 76px;
 }
+/* ??????????????? */
+/* .menu-list .nav-item + .nav-item{
+    margin-left: 40px;
+} */
 
+.menu-list{
+    gap: 40px;
+}
+/* ??????????????? */
+.address{
+    gap: 40px;
+}
+/* ??????????????????????? */
 .menu-list .contact-list{
     display: block;
     padding-top: 24px;
