--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,8 @@ body{
 }
 
 .hero-title{
+    margin-left: auto;
+    margin-right: auto;
 
 font-style: normal;
 font-weight: 700;
@@ -229,24 +231,20 @@ letter-spacing: 0.02em;
 .page-header{
     border-bottom: 1px solid #e7e9fc
 }
-/* ??????????????? */
+
 .logo,
 .top-logo{
     margin-right: 76px;
 }
-/* ??????????????? */
+
 /* .menu-list .nav-item + .nav-item{
     margin-left: 40px;
 } */
 
-.menu-list{
+/* .menu-list{
     gap: 40px;
-}
-/* ??????????????? */
-.address{
-    gap: 40px;
-}
-/* ??????????????????????? */
+} */
+
 .menu-list .contact-list{
     display: block;
     padding-top: 24px;
@@ -257,7 +255,6 @@ letter-spacing: 0.02em;
     margin-left: 76px;
   
 }
-
 
 
 .contact .nav-item + .nav-item{
@@ -293,8 +290,10 @@ letter-spacing: 0.02em;
 }
 
 .hero-batton{
-    display: flex;
-    margin: auto;
+    margin-top: 48px;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;   
     display: block;
 
     background-color: #4D5AE5;
