--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,16 @@ letter-spacing: 0.02em;
 /* .menu-list{
     gap: 40px;
 } */
-
+/* ?????????????? */
+.nav-item:not(:last-child){
+    margin-right: 40px;
+}
+/* ????????????? */
+/* ??????????? */
+.nav-item:not(:last-child){
+    margin-right: 40px;
+}
+/* ??????????? */
 .menu-list .contact-list{
     display: block;
     padding-top: 24px;
