--- a/css/style.css
+++ b/css/style.css
@@ -372,7 +372,7 @@ letter-spacing: 0.02em;
 
 .privelege-list{
     /* width: calc((100% - 72px) / 4); */
-    width calc((100% - 3 * 24px) / 4);
+    width: calc((100% - 3 * 24px) / 4);
 }
 
   
