--- a/css/style.css
+++ b/css/style.css
@@ -260,10 +260,10 @@ letter-spacing: 0.02em;
     padding-bottom: 24px;
 }
 
-.nav-item{
+/* .nav-item{
     margin-left: 76px;
   
-}
+} */
 
 
 .contact .nav-item + .nav-item{
