--- a/css/style.css
+++ b/css/style.css
@@ -335,6 +335,13 @@ letter-spacing: 0.02em;
     border: 1px solid #E7E9FC;
 }
 
+.container-team{
+    padding-top: 32px;
+    padding-bottom: 32px; 
+    padding-bottom: 32px; 
+    padding-right: 16px;
+}
+
 
 .team-list-item{
     border-radius: 0px 0px 4px 4px;
