--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,7 @@ letter-spacing: 0.02em;
 .container-team{
     padding-top: 32px;
     padding-bottom: 32px; 
-    padding-bottom: 32px; 
+    padding-left: 16px;
     padding-right: 16px;
 }
 
