--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,7 @@ letter-spacing: 0.02em;
     border: 1px solid #E7E9FC;
 }
 
-.container-team{
+.job-title{
     padding-top: 32px;
     padding-bottom: 32px; 
     padding-left: 16px;
