--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,11 @@ letter-spacing: 0.02em;
 
 .section{
     padding-top:120px ;
+    /* padding-bottom:120px ; */
+}
+
+.promo{
+    padding-top:120px ;
     padding-bottom:120px ;
 }
 
